--- a/examples/tutorials/colabs/ECCV_2020_Navigation.ipynb
+++ b/examples/tutorials/colabs/ECCV_2020_Navigation.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/HugoHunt/-AI-/blob/main/examples/tutorials/colabs/ECCV_2020_Navigation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "7WoPy5bdHQqH"
       },
       "source": [
@@ -26,11 +36,11 @@
       "cell_type": "code",
       "execution_count": 26,
       "metadata": {
-        "id": "l5RJPtJ4HQqJ",
-        "outputId": "cc0fd3a2-72ab-4012-fa6c-d8f1e3a66885",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "l5RJPtJ4HQqJ",
+        "outputId": "cc0fd3a2-72ab-4012-fa6c-d8f1e3a66885"
       },
       "outputs": [
         {
@@ -68,12 +78,12 @@
         "!pip install magnum"
       ],
       "metadata": {
-        "id": "yjokvsCgHVYC",
-        "outputId": "4bb210b8-c4a6-4785-c3be-d08c2eb24b35",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "yjokvsCgHVYC",
+        "outputId": "4bb210b8-c4a6-4785-c3be-d08c2eb24b35"
       },
       "execution_count": 27,
       "outputs": [
@@ -499,11 +509,11 @@
         "!bash ./Miniconda3-latest-Linux-x86_64.sh -bfp /usr/local"
       ],
       "metadata": {
-        "id": "rWAOoUeHHk94",
-        "outputId": "26822617-bf2a-4632-d2f3-a96b2a80607c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rWAOoUeHHk94",
+        "outputId": "26822617-bf2a-4632-d2f3-a96b2a80607c"
       },
       "execution_count": 28,
       "outputs": [
@@ -536,6 +546,241 @@
             "    For best results, please verify that your PYTHONPATH only points to\n",
             "    directories of packages that are compatible with the Python interpreter\n",
             "    in Miniconda3: /usr/local\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!conda create -n habitat python=3.9 cmake=3.14.0"
+      ],
+      "metadata": {
+        "id": "y3yzMnjmIJ3B",
+        "outputId": "c69e00ff-27a3-41e6-dcd6-80023c67e9f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "WARNING: A conda environment already exists at '/usr/local/envs/habitat'\n",
+            "\n",
+            "Remove existing environment?\n",
+            "This will remove ALL directories contained within this specified prefix directory, including any other conda environments.\n",
+            "\n",
+            " (y/[n])? y\n",
+            "\n",
+            "Channels:\n",
+            " - defaults\n",
+            "Platform: linux-64\n",
+            "Collecting package metadata (repodata.json): - \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\bdone\n",
+            "Solving environment: / \b\bdone\n",
+            "\n",
+            "## Package Plan ##\n",
+            "\n",
+            "  environment location: /usr/local/envs/habitat\n",
+            "\n",
+            "  added / updated specs:\n",
+            "    - cmake=3.14.0\n",
+            "    - python=3.9\n",
+            "\n",
+            "\n",
+            "The following NEW packages will be INSTALLED:\n",
+            "\n",
+            "  _libgcc_mutex      pkgs/main/linux-64::_libgcc_mutex-0.1-main \n",
+            "  _openmp_mutex      pkgs/main/linux-64::_openmp_mutex-5.1-1_gnu \n",
+            "  bzip2              pkgs/main/linux-64::bzip2-1.0.8-h5eee18b_6 \n",
+            "  c-ares             pkgs/main/linux-64::c-ares-1.19.1-h5eee18b_0 \n",
+            "  ca-certificates    pkgs/main/linux-64::ca-certificates-2024.11.26-h06a4308_0 \n",
+            "  cmake              pkgs/main/linux-64::cmake-3.14.0-h52cb24c_0 \n",
+            "  expat              pkgs/main/linux-64::expat-2.6.4-h6a678d5_0 \n",
+            "  krb5               pkgs/main/linux-64::krb5-1.20.1-h143b758_1 \n",
+            "  ld_impl_linux-64   pkgs/main/linux-64::ld_impl_linux-64-2.40-h12ee557_0 \n",
+            "  libcurl            pkgs/main/linux-64::libcurl-8.11.1-hc9e6f67_0 \n",
+            "  libedit            pkgs/main/linux-64::libedit-3.1.20230828-h5eee18b_0 \n",
+            "  libev              pkgs/main/linux-64::libev-4.33-h7f8727e_1 \n",
+            "  libffi             pkgs/main/linux-64::libffi-3.4.4-h6a678d5_1 \n",
+            "  libgcc-ng          pkgs/main/linux-64::libgcc-ng-11.2.0-h1234567_1 \n",
+            "  libgomp            pkgs/main/linux-64::libgomp-11.2.0-h1234567_1 \n",
+            "  libnghttp2         pkgs/main/linux-64::libnghttp2-1.57.0-h2d74bed_0 \n",
+            "  libssh2            pkgs/main/linux-64::libssh2-1.11.1-h251f7ec_0 \n",
+            "  libstdcxx-ng       pkgs/main/linux-64::libstdcxx-ng-11.2.0-h1234567_1 \n",
+            "  lz4-c              pkgs/main/linux-64::lz4-c-1.9.4-h6a678d5_1 \n",
+            "  ncurses            pkgs/main/linux-64::ncurses-6.4-h6a678d5_0 \n",
+            "  openssl            pkgs/main/linux-64::openssl-3.0.15-h5eee18b_0 \n",
+            "  pip                pkgs/main/linux-64::pip-24.2-py39h06a4308_0 \n",
+            "  python             pkgs/main/linux-64::python-3.9.21-he870216_1 \n",
+            "  readline           pkgs/main/linux-64::readline-8.2-h5eee18b_0 \n",
+            "  rhash              pkgs/main/linux-64::rhash-1.4.3-hdbd6064_0 \n",
+            "  setuptools         pkgs/main/linux-64::setuptools-75.1.0-py39h06a4308_0 \n",
+            "  sqlite             pkgs/main/linux-64::sqlite-3.45.3-h5eee18b_0 \n",
+            "  tk                 pkgs/main/linux-64::tk-8.6.14-h39e8969_0 \n",
+            "  tzdata             pkgs/main/noarch::tzdata-2024b-h04d1e81_0 \n",
+            "  wheel              pkgs/main/linux-64::wheel-0.44.0-py39h06a4308_0 \n",
+            "  xz                 pkgs/main/linux-64::xz-5.4.6-h5eee18b_1 \n",
+            "  zlib               pkgs/main/linux-64::zlib-1.2.13-h5eee18b_1 \n",
+            "  zstd               pkgs/main/linux-64::zstd-1.5.6-hc292b87_0 \n",
+            "\n",
+            "\n",
+            "Proceed ([y]/n)? y\n",
+            "\n",
+            "\n",
+            "Downloading and Extracting Packages:\n",
+            "\n",
+            "Preparing transaction: - \b\b\\ \b\b| \b\b/ \b\bdone\n",
+            "Verifying transaction: \\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\bdone\n",
+            "Executing transaction: - \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\bdone\n",
+            "#\n",
+            "# To activate this environment, use\n",
+            "#\n",
+            "#     $ conda activate habitat\n",
+            "#\n",
+            "# To deactivate an active environment, use\n",
+            "#\n",
+            "#     $ conda deactivate\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "sys.path.append('/usr/local/lib/python3.9/site-packages/')"
+      ],
+      "metadata": {
+        "id": "GipPuMZCIqK_"
+      },
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!conda init"
+      ],
+      "metadata": {
+        "id": "UtqxKzrVIbqn",
+        "outputId": "4265c6fa-fce3-4c9d-e1a2-c1c59be0cfbf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "no change     /usr/local/condabin/conda\n",
+            "no change     /usr/local/bin/conda\n",
+            "no change     /usr/local/bin/conda-env\n",
+            "no change     /usr/local/bin/activate\n",
+            "no change     /usr/local/bin/deactivate\n",
+            "no change     /usr/local/etc/profile.d/conda.sh\n",
+            "no change     /usr/local/etc/fish/conf.d/conda.fish\n",
+            "no change     /usr/local/shell/condabin/Conda.psm1\n",
+            "no change     /usr/local/shell/condabin/conda-hook.ps1\n",
+            "no change     /usr/local/lib/python3.12/site-packages/xontrib/conda.xsh\n",
+            "no change     /usr/local/etc/profile.d/conda.csh\n",
+            "no change     /root/.bashrc\n",
+            "No action taken.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!conda env list"
+      ],
+      "metadata": {
+        "id": "SO7nN8CgIxfE",
+        "outputId": "49a98f17-e585-46d8-80fd-ce2f7b3009c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "# conda environments:\n",
+            "#\n",
+            "base                   /usr/local\n",
+            "habitat                /usr/local/envs/habitat\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!conda init zsh"
+      ],
+      "metadata": {
+        "id": "qSIDr_V-I6o2",
+        "outputId": "f6aec2af-3003-4b65-ec47-9c1572081adc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "no change     /usr/local/condabin/conda\n",
+            "no change     /usr/local/bin/conda\n",
+            "no change     /usr/local/bin/conda-env\n",
+            "no change     /usr/local/bin/activate\n",
+            "no change     /usr/local/bin/deactivate\n",
+            "no change     /usr/local/etc/profile.d/conda.sh\n",
+            "no change     /usr/local/etc/fish/conf.d/conda.fish\n",
+            "no change     /usr/local/shell/condabin/Conda.psm1\n",
+            "no change     /usr/local/shell/condabin/conda-hook.ps1\n",
+            "no change     /usr/local/lib/python3.12/site-packages/xontrib/conda.xsh\n",
+            "no change     /usr/local/etc/profile.d/conda.csh\n",
+            "modified      /root/.zshrc\n",
+            "\n",
+            "==> For changes to take effect, close and re-open your current shell. <==\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!conda activate habitat"
+      ],
+      "metadata": {
+        "id": "E6xH3JqqJN3X",
+        "outputId": "45047f9a-b96a-4803-b572-74800f409aa9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "CondaError: Run 'conda init' before 'conda activate'\n",
+            "\n"
           ]
         }
       ]
@@ -1892,7 +2137,8 @@
     "accelerator": "GPU",
     "colab": {
       "name": "ECCV 2020: Navigation",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "jupytext": {
       "cell_metadata_filter": "-all",
